force-app/main/default/objects/Case/fields/Alternate_Pharmacy_Manager__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Pharmacy_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Pharmacy Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Renewals As Alternate Pharmacy Manager</relationshipLabel>
    <relationshipName>AlternatePharmacyManager_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>