force-app/main/default/objects/Case/fields/Another_Pharmacy_Helps_With_Packaging__c.field-meta.xml
<CustomField>
    <fullName>Another_Pharmacy_Helps_With_Packaging__c</fullName>
    <label>Another Pharmacy Helps With Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>