force-app/main/default/objects/Case/fields/Application_Complete__c.field-meta.xml
<CustomField>
    <fullName>Application_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Complete</label>
    <type>Checkbox</type>
</CustomField>