force-app/main/default/objects/Case/fields/Assigned_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Start_Time__c</fullName>
    <label>Assigned Start Time</label>
    <type>DateTime</type>
</CustomField>