force-app/main/default/objects/Case/fields/Associate_Fee_to_Order__c.field-meta.xml
<CustomField>
    <fullName>Associate_Fee_to_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Fee to Order</label>
    <type>Checkbox</type>
</CustomField>