force-app/main/default/objects/Case/fields/Authorized_To_Use_Demographic_Info__c.field-meta.xml
<CustomField>
    <fullName>Authorized_To_Use_Demographic_Info__c</fullName>
    <label>Authorized To Use Demographic Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>