force-app/main/default/objects/Case/fields/Average_Prescriptions_Dispensed_week__c.field-meta.xml
<CustomField>
    <fullName>Average_Prescriptions_Dispensed_week__c</fullName>
    <label>Average # Prescriptions Dispensed/week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>