force-app/main/default/objects/Case/fields/Average_Scheduled_Pharmacist_Hours_week__c.field-meta.xml
<CustomField>
    <fullName>Average_Scheduled_Pharmacist_Hours_week__c</fullName>
    <label>Average Scheduled Pharmacist Hours/week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>