force-app/main/default/objects/Case/fields/Average_Scheduled_PTA_Hours_week__c.field-meta.xml
<CustomField>
    <fullName>Average_Scheduled_PTA_Hours_week__c</fullName>
    <inlineHelpText>Average Scheduled Pharmacy Technicians + Assistants Hours/week</inlineHelpText>
    <label>Average Scheduled PTA Hours/week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>