force-app/main/default/objects/Case/fields/Bypass_Case_Creation_RTF__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Case_Creation_RTF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Case Creation RTF</label>
    <type>Checkbox</type>
</CustomField>