force-app/main/default/objects/Case/fields/Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Closed_Status__c</fullName>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not-Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>