force-app/main/default/objects/Case/fields/Date_Of_Closure__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Closure__c</fullName>
    <label>Date Of Closure</label>
    <type>Date</type>
</CustomField>