force-app/main/default/objects/Case/fields/Days_Of_The_Week__c.field-meta.xml
<CustomField>
    <fullName>Days_Of_The_Week__c</fullName>
    <label>Days Of The Week</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_Of_The_Week</valueSetName>
    </valueSet>
</CustomField>