force-app/main/default/objects/Case/fields/Days_Pharmacy_is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Days_Pharmacy_is_Closed__c</fullName>
    <label>Days Pharmacy is Closed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>