force-app/main/default/objects/Case/fields/Declaration_Of_Sufficient_Practice_Hours__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Of_Sufficient_Practice_Hours__c</fullName>
    <label>Declaration Of Sufficient Practice Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>