force-app/main/default/objects/Case/fields/Description_Of_Practice_In_Other_Coutnr__c.field-meta.xml
<CustomField>
    <fullName>Description_Of_Practice_In_Other_Coutnr__c</fullName>
    <label>Description Of Practice In Other Country</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>