force-app/main/default/objects/Case/fields/DescriptionRTF__c.field-meta.xml
<CustomField>
    <fullName>DescriptionRTF__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>