force-app/main/default/objects/Case/fields/External_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Status__c</fullName>
    <formula>Case(Status,
&quot;New&quot;,&quot;Draft&quot;,
&quot;Submitted&quot;,IF( TEXT(Pending_Status__c) = &apos;NSCP&apos;,&quot;Submitted&quot;, IF (ISBLANK(TEXT(Pending_Status__c)), &quot;Submitted&quot;, &quot;Returned&quot;)),
&quot;Assigned&quot;,IF( TEXT(Pending_Status__c) = &apos;NSCP&apos;,&quot;Submitted&quot;, IF (ISBLANK(TEXT(Pending_Status__c)), &quot;Submitted&quot;, &quot;Returned&quot;)),
&quot;Under Review&quot;, IF( TEXT(Pending_Status__c) = &apos;NSCP&apos;,&quot;Submitted&quot;, IF (ISBLANK(TEXT(Pending_Status__c)), &quot;Submitted&quot;, &quot;Returned&quot;)),
&quot;Closed&quot;,  TEXT(Closed_Status__c),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>