force-app/main/default/objects/Case/fields/Fee_Associated_to_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Associated_to_Order_Date__c</fullName>
    <label>Fee Associated to Order Date</label>
    <type>DateTime</type>
</CustomField>