force-app/main/default/objects/Case/fields/Incoming_Manager__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Manager__c</fullName>
    <label>Incoming Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>