force-app/main/default/objects/Case/fields/Incoming_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Manager_Email__c</fullName>
    <label>Incoming Manager Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>