force-app/main/default/objects/Case/fields/Incoming_Manager_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Manager_Registration_Number__c</fullName>
    <label>Incoming Manager Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>