force-app/main/default/objects/Case/fields/Jurisdictions__c.field-meta.xml
<CustomField>
    <fullName>Jurisdictions__c</fullName>
    <label>Jurisdictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>