force-app/main/default/objects/Case/fields/Licensed_Jurisdictions__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Jurisdictions__c</fullName>
    <label>Licensed Jurisdictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>