force-app/main/default/objects/Case/fields/Location_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Practice__c</fullName>
    <label>Location of Practice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nova Scotia</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>