force-app/main/default/objects/Case/fields/New_Manager__c.field-meta.xml
<CustomField>
    <fullName>New_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>PharmacyNewManager</relationshipName>
    <type>Lookup</type>
</CustomField>