force-app/main/default/objects/Case/fields/New_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Manager_Email__c</fullName>
    <label>New Manager Email</label>
    <type>Email</type>
</CustomField>