force-app/main/default/objects/Case/fields/New_Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Manager_Role__c</fullName>
    <label>New Manager Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Interim</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>