force-app/main/default/objects/Case/fields/New_Manager_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Manager_Start_Date__c</fullName>
    <label>New Manager Start Date</label>
    <type>Date</type>
</CustomField>