force-app/main/default/objects/Case/fields/New_Methadone_Patients__c.field-meta.xml
<CustomField>
    <fullName>New_Methadone_Patients__c</fullName>
    <label>New Methadone Patients</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>