force-app/main/default/objects/Case/fields/New_Pharmacy_Owner_Rep__c.field-meta.xml
<CustomField>
    <fullName>New_Pharmacy_Owner_Rep__c</fullName>
    <label>New Pharmacy Owner Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>