force-app/main/default/objects/Case/fields/New_Pharmacy_Owner_Rep_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Pharmacy_Owner_Rep_Address__c</fullName>
    <label>New Pharmacy Owner Rep Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>