force-app/main/default/objects/Case/fields/Owner_Signature__c.field-meta.xml
<CustomField>
    <fullName>Owner_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Signature</label>
    <type>Checkbox</type>
</CustomField>