force-app/main/default/objects/Case/fields/PACA_Qualified__c.field-meta.xml
<CustomField>
    <fullName>PACA_Qualified__c</fullName>
    <label>PACA Qualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>