force-app/main/default/objects/Case/fields/PACA_system__c.field-meta.xml
<CustomField>
    <fullName>PACA_system__c</fullName>
    <label>PACA (system)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>