force-app/main/default/objects/Case/fields/Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>Pending_Status__c</fullName>
    <label>Pending Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registrant</fullName>
            </value>
            <value>
                <fullName>NSCP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>