force-app/main/default/objects/Case/fields/Pharmacy_Name_And_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Name_And_Mailing_Address__c</fullName>
    <label>Pharmacy Name And Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>