force-app/main/default/objects/Case/fields/Pharmacy_Owner__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewals As Pharmacy Owner</relationshipLabel>
    <relationshipName>PharmacyOwner_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>