force-app/main/default/objects/Case/fields/Pharmacy_Owner_Representative__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Owner_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharmacy Owner Representative</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Renewals As Pharmacy Owner Rep</relationshipLabel>
    <relationshipName>PharmacyOwnerRep_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>