force-app/main/default/objects/Case/fields/Previous_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Previous_Manager_Email__c</fullName>
    <label>Previous Manager Email</label>
    <type>Email</type>
</CustomField>