force-app/main/default/objects/Case/fields/Previous_Manager_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Manager_End_Date__c</fullName>
    <label>Previous Manager End Date</label>
    <type>Date</type>
</CustomField>