force-app/main/default/objects/Case/fields/Previous_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Previous_Pharmacy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Pharmacy</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Relocation Applications</relationshipLabel>
    <relationshipName>Old_Pharmacy_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>