force-app/main/default/objects/Case/fields/Proposed_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Acquisition_Date__c</fullName>
    <label>Proposed Acquisition Date</label>
    <type>Date</type>
</CustomField>