force-app/main/default/objects/Case/fields/Proposed_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Opening_Date__c</fullName>
    <label>Proposed Opening Date</label>
    <type>Date</type>
</CustomField>