force-app/main/default/objects/Case/fields/Proposed_Pre_Opening_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Pre_Opening_Inspection_Date__c</fullName>
    <label>Proposed Pre-Opening Inspection Date</label>
    <type>Date</type>
</CustomField>