force-app/main/default/objects/Case/fields/Proposed_Relocation_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Relocation_Date__c</fullName>
    <label>Proposed Relocation Date</label>
    <type>Date</type>
</CustomField>