force-app/main/default/objects/Case/fields/Proposed_Renovation_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Renovation_Date__c</fullName>
    <label>Proposed Renovation Date</label>
    <type>Date</type>
</CustomField>