force-app/main/default/objects/Case/fields/Provides_Methadone_Services__c.field-meta.xml
<CustomField>
    <fullName>Provides_Methadone_Services__c</fullName>
    <label>Provides Methadone Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>