force-app/main/default/objects/Case/fields/Racialized_Group__c.field-meta.xml
<CustomField>
    <fullName>Racialized_Group__c</fullName>
    <label>Racialized Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Racialized_Group</valueSetName>
    </valueSet>
</CustomField>