force-app/main/default/objects/Case/fields/Reimbursement_Collected__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Collected__c</fullName>
    <label>Reimbursement Collected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>