force-app/main/default/objects/Case/fields/Renewal_Actions_Processed__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Actions_Processed__c</fullName>
    <label>Renewal Actions Processed</label>
    <type>DateTime</type>
</CustomField>