force-app/main/default/objects/Case/fields/Renewal_Year__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Year__c</fullName>
    <label>Renewal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>