force-app/main/default/objects/Case/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <label>Return Date</label>
    <type>DateTime</type>
</CustomField>