force-app/main/default/objects/Case/fields/Returned_Notes__c.field-meta.xml
<CustomField>
    <fullName>Returned_Notes__c</fullName>
    <label>Returned Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>