force-app/main/default/objects/Case/fields/Total_Open_Hours_of_the_Dispensary_week__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Hours_of_the_Dispensary_week__c</fullName>
    <label>Total Open Hours of the Dispensary/week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>