force-app/main/default/objects/Case/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <label>User Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Registrant_User_Groups</valueSetName>
    </valueSet>
</CustomField>