force-app/main/default/objects/Case/listViews/Applications.listView-meta.xml
<ListView>
    <fullName>Applications</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>External_Status__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>Applications</label>
</ListView>