force-app/main/default/objects/Case/listViews/My_Open_Cases_Registrant_Action_Requir.listView-meta.xml
<ListView>
    <fullName>My_Open_Cases_Registrant_Action_Requir</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Pending_Status__c</field>
        <operation>equals</operation>
        <value>Registrant</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>New,Closed</value>
    </filters>
    <label>My Open Cases - Registrant Action Requir</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>