force-app/main/default/objects/Case/listViews/Submitted_Applications_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Submitted_Applications_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Submitted Applications Queue</label>
    <queue>Submitted_Applications_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>